# trakt-watch

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yaml
trakt_watch/: __main__.py  core.py
